<resources>
    <string name="app_name">Tutorable</string>
    <string name="title_home">Home</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_settings">Settings</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_tutor">Tutor?</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="app_logo">Tutorable</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>

    <string name="header_tutor_registration">Register as a Tutor</string>
    <string name="action_upload_file">Upload</string>
    <string name="action_submit">Submit</string>
    <string name="editText_resume">Select Resume</string>
    <string name="editText_transcript">Select Transcript</string>

    <string name="header_welcome">Welcome</string>
    <string name="action_look_for_tutors">Look For Tutors</string>
    <string name="header_your_appointments">Your Appointments</string>
    <string name="header_appointments">Find a Session</string>
    <string name="header_requests">Requests</string>

    <string name="spinner_subject">Subject:</string>
    <string name="spinner_course">Course:</string>
    <string name="header_timeslots">Available Sessions</string>
    <string name="header_settings">Settings</string>
    <string name="action_set_availability">Set Availability</string>

    <string name="header_set_availability">Set Availability</string>
    <string name="header_date">Date</string>
    <string name="header_time">Time</string>
    <string name="header_location">Location</string>
    <string name="prompt_location">Location</string>
    <string name="radio_appointment">Appointment</string>
    <string name="radio_drop_in">Drop-in</string>
    <string name="radio_virtual">Virtual</string>
    <string name="header_type">Type</string>
    <string name="button_confirm">Confirm</string>

    <string name="header_user_info">User Information</string>
    <string name="spinner_school">School:</string>
    <string name="action_save_settings">Save</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="profile_picture">Profile Picture</string>

    <string-array name="school_array">
        <item>UMass Lowell</item>
    </string-array>
    <string-array name="subject_array">
        <item>Math</item>
        <item>English</item>
        <item>Electrical Engineering</item>
        <item>Computer Science</item>
    </string-array>
    <string-array name="course_array">
        <item>Calculus I</item>
        <item>Calculus II</item>
        <item>Discrete Structures I</item>
        <item>College Writing I</item>
        <item>College Writing II</item>
        <item>Circuit Theory I</item>
        <item>Circuit Theory II</item>
        <item>Logic Design</item>
        <item>Computing I</item>
        <item>Computing II</item>
        <item>Computer Architecture</item>
    </string-array>
</resources>