<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.student.appointments.StudentAppointmentsFragment">

    <TextView
        android:id="@+id/header_set_availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        android:text="@string/header_set_availability"
        android:textColor="@color/dark_grey"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/header_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/header_date"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/spinner_date"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        android:text="@string/header_date"
        android:textSize="24sp"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/header_time"
        app:layout_constraintEnd_toStartOf="@+id/spinner_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_set_availability" />

    <Spinner
        android:id="@+id/spinner_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="48dp"
        android:background="@drawable/login_edit"
        app:layout_constraintBottom_toBottomOf="@+id/header_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/header_date"
        app:layout_constraintTop_toTopOf="@+id/header_date"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/header_time"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/spinner_time"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        android:text="@string/header_time"
        android:textSize="24sp"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/header_location"
        app:layout_constraintEnd_toStartOf="@id/spinner_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_date" />

    <Spinner
        android:id="@+id/spinner_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/login_edit"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/header_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/header_time"
        app:layout_constraintTop_toTopOf="@id/header_time"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/header_location"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/editText_location"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        android:text="@string/header_location"
        android:textSize="24sp"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@id/header_type"
        app:layout_constraintEnd_toStartOf="@id/editText_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_time" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/login_edit"
        android:hint="@string/prompt_location"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="@id/header_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/header_location"
        app:layout_constraintTop_toTopOf="@id/header_location"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/header_type"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/editText_location"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        android:text="@string/header_type"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/button_confirm"
        app:layout_constraintEnd_toStartOf="@id/radio_group_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_location" />

    <RadioGroup
        android:id="@+id/radio_group_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@id/header_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/header_type"
        app:layout_constraintTop_toTopOf="@+id/header_type"
        app:layout_constraintVertical_bias="0.05">


        <RadioButton
            android:id="@+id/radio_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_appointment"
            android:textColor="@color/dark_grey" />

        <RadioButton
            android:id="@+id/radio_drop_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_drop_in"
            android:textColor="@color/dark_grey"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radio_virtual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_virtual"
            android:textColor="@color/dark_grey"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="8dp"
        android:enabled="true"
        android:text="@string/button_confirm"
        android:textColor="@color/white"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_type" />

</androidx.constraintlayout.widget.ConstraintLayout>