<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.tutor.TutorRegistrationFragment">

    <TextView
        android:id="@+id/header_tutor_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        android:text="@string/header_tutor_registration"
        android:textStyle="bold"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/header_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/header_subject"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/spinner_subject"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        android:text="@string/spinner_subject"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/header_course"
        app:layout_constraintEnd_toStartOf="@+id/spinner_subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_tutor_registration" />

    <Spinner
        android:id="@+id/spinner_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/login_edit"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/header_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/header_subject"
        app:layout_constraintTop_toTopOf="@+id/header_subject"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/header_course"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/spinner_course"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        android:text="@string/spinner_course"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/editText_resume"
        app:layout_constraintEnd_toStartOf="@id/spinner_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_subject" />

    <Spinner
        android:id="@+id/spinner_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/login_edit"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/header_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/header_course"
        app:layout_constraintTop_toTopOf="@id/header_course"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editText_resume"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:hint="@string/editText_resume"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:background="@drawable/login_edit"
        app:layout_constraintBottom_toTopOf="@id/editText_transcript"
        app:layout_constraintEnd_toStartOf="@id/button_upload_resume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_course"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_upload_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_upload_file"
        app:layout_constraintBottom_toBottomOf="@id/editText_resume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editText_resume"
        app:layout_constraintTop_toTopOf="@id/editText_resume"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editText_transcript"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/editText_transcript"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:background="@drawable/login_edit"
        app:layout_constraintBottom_toTopOf="@id/button_submit"
        app:layout_constraintEnd_toStartOf="@id/button_upload_transcript"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_resume"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_upload_transcript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_upload_file"
        app:layout_constraintBottom_toBottomOf="@id/editText_transcript"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editText_transcript"
        app:layout_constraintTop_toTopOf="@id/editText_transcript"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/action_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_transcript"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>