<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_login"
        android:name="android.example.tutorable.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="android.example.tutorable.ui.register.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_navigation_register_to_navigation_tutor_registration"
            app:destination="@id/navigation_tutor_registration" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_navigation_register_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="android.example.tutorable.ui.student.home.StudentHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_student_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_appointments"
            app:destination="@id/navigation_appointments" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_login"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="android.example.tutorable.ui.student.appointments.StudentAppointmentsFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/fragment_student_appointments" >
        <action
            android:id="@+id/action_navigation_appointments_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_appointments_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="android.example.tutorable.ui.student.settings.StudentSettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_student_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_appointments"
            app:destination="@id/navigation_appointments" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_login"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_tutor_registration"
        android:name="android.example.tutorable.ui.tutor.registration.TutorRegistrationFragment"
        android:label="Tutor Registration"
        tools:layout="@layout/fragment_tutor_registration" />
</navigation>